{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 977,
  "lineage": "a4d69ac6-8c49-99be-b0fe-064f073342a9",
  "resources": [
    {
      "module": "module.ec2[\"wsc2026-bastion\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07173cfca7b890747",
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:elastic-ip/eipalloc-07173cfca7b890747",
            "associate_with_private_ip": "192.168.1.134",
            "association_id": "eipassoc-0d21bdccb70586443",
            "domain": "vpc",
            "id": "eipalloc-07173cfca7b890747",
            "instance": "i-07f2b8740283af082",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-08f7d6b22e6ca1d52",
            "private_dns": "ip-192-168-1-134.ap-northeast-2.compute.internal",
            "private_ip": "192.168.1.134",
            "public_dns": "ec2-3-39-129-61.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.129.61",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "wsc2026-bastion-eip"
            },
            "tags_all": {
              "Name": "wsc2026-bastion-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "eipalloc-07173cfca7b890747",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_caller_identity.current",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_region.current",
            "module.dynamodb.aws_dynamodb_resource_policy.this",
            "module.dynamodb.aws_dynamodb_table.this",
            "module.dynamodb.aws_dynamodb_table_item.this",
            "module.dynamodb.data.aws_iam_policy_document.this",
            "module.ec2.aws_iam_instance_profile.this",
            "module.ec2.aws_iam_role.this",
            "module.ec2.aws_instance.this",
            "module.ec2.aws_key_pair.this",
            "module.ec2.aws_security_group.this",
            "module.ec2.data.aws_ssm_parameter.latest_ami",
            "module.ec2.tls_private_key.this",
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.iam.aws_iam_policy.this",
            "module.iam.aws_iam_role.this",
            "module.iam.aws_iam_role_policy.inline",
            "module.iam.aws_iam_role_policy_attachment.custom",
            "module.iam.aws_iam_role_policy_attachment.managed",
            "module.iam.data.aws_iam_policy_document.this_policy",
            "module.iam.data.aws_iam_policy_document.this_role",
            "module.kms.aws_kms_alias.this",
            "module.kms.aws_kms_key.this",
            "module.kms.data.aws_iam_policy_document.this",
            "module.lambda.aws_iam_policy.this",
            "module.lambda.aws_iam_role.this",
            "module.lambda.aws_iam_role_policy_attachment.custom",
            "module.lambda.aws_iam_role_policy_attachment.managed",
            "module.lambda.aws_kms_ciphertext.this",
            "module.lambda.aws_lambda_function.this",
            "module.lambda.aws_lambda_function_url.this",
            "module.lambda.aws_security_group.this",
            "module.lambda.data.archive_file.this",
            "module.lambda.data.aws_iam_policy_document.this",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"wsc2026-bastion\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b08702f8675347e1",
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:instance/i-07f2b8740283af082",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "wsc2026-bastion-profile",
            "id": "i-07f2b8740283af082",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "wsc2026",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08f7d6b22e6ca1d52"
              }
            ],
            "primary_network_interface_id": "eni-08f7d6b22e6ca1d52",
            "private_dns": "ip-192-168-1-134.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.134",
            "public_dns": "ec2-3-35-216-86.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.216.86",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fe3e972b66723573",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018bd8e99acc64ab2",
            "tags": {
              "Name": "wsc2026-bastion"
            },
            "tags_all": {
              "Name": "wsc2026-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07860f42f43cfce27"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "i-07f2b8740283af082",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_caller_identity.current",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_region.current",
            "module.dynamodb.aws_dynamodb_resource_policy.this",
            "module.dynamodb.aws_dynamodb_table.this",
            "module.dynamodb.aws_dynamodb_table_item.this",
            "module.dynamodb.data.aws_iam_policy_document.this",
            "module.ec2.aws_iam_instance_profile.this",
            "module.ec2.aws_iam_role.this",
            "module.ec2.aws_key_pair.this",
            "module.ec2.aws_security_group.this",
            "module.ec2.data.aws_ssm_parameter.latest_ami",
            "module.ec2.tls_private_key.this",
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.iam.aws_iam_policy.this",
            "module.iam.aws_iam_role.this",
            "module.iam.aws_iam_role_policy.inline",
            "module.iam.aws_iam_role_policy_attachment.custom",
            "module.iam.aws_iam_role_policy_attachment.managed",
            "module.iam.data.aws_iam_policy_document.this_policy",
            "module.iam.data.aws_iam_policy_document.this_role",
            "module.kms.aws_kms_alias.this",
            "module.kms.aws_kms_key.this",
            "module.kms.data.aws_iam_policy_document.this",
            "module.lambda.aws_iam_policy.this",
            "module.lambda.aws_iam_role.this",
            "module.lambda.aws_iam_role_policy_attachment.custom",
            "module.lambda.aws_iam_role_policy_attachment.managed",
            "module.lambda.aws_kms_ciphertext.this",
            "module.lambda.aws_lambda_function.this",
            "module.lambda.aws_lambda_function_url.this",
            "module.lambda.aws_security_group.this",
            "module.lambda.data.archive_file.this",
            "module.lambda.data.aws_iam_policy_document.this",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"wsc2026-bastion\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-07860f42f43cfce27",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-07860f42f43cfce27",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wsc2026-bastion-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wsc2026-bastion-sg"
            },
            "tags_all": {
              "Name": "wsc2026-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c116da65719506f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-07860f42f43cfce27",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_caller_identity.current",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_region.current",
            "module.dynamodb.aws_dynamodb_resource_policy.this",
            "module.dynamodb.aws_dynamodb_table.this",
            "module.dynamodb.aws_dynamodb_table_item.this",
            "module.dynamodb.data.aws_iam_policy_document.this",
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.iam.aws_iam_policy.this",
            "module.iam.aws_iam_role.this",
            "module.iam.aws_iam_role_policy.inline",
            "module.iam.aws_iam_role_policy_attachment.custom",
            "module.iam.aws_iam_role_policy_attachment.managed",
            "module.iam.data.aws_iam_policy_document.this_policy",
            "module.iam.data.aws_iam_policy_document.this_role",
            "module.kms.aws_kms_alias.this",
            "module.kms.aws_kms_key.this",
            "module.kms.data.aws_iam_policy_document.this",
            "module.lambda.aws_iam_policy.this",
            "module.lambda.aws_iam_role.this",
            "module.lambda.aws_iam_role_policy_attachment.custom",
            "module.lambda.aws_iam_role_policy_attachment.managed",
            "module.lambda.aws_kms_ciphertext.this",
            "module.lambda.aws_lambda_function.this",
            "module.lambda.aws_lambda_function_url.this",
            "module.lambda.aws_security_group.this",
            "module.lambda.data.archive_file.this",
            "module.lambda.data.aws_iam_policy_document.this",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"mark-sg\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-0b5f08be192fd1a0f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5f08be192fd1a0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "mark-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mark-sg"
            },
            "tags_all": {
              "Name": "mark-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c116da65719506f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-0b5f08be192fd1a0f",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"wsc2026-app-alb-sg\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-0966f1fddf820a5c9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0966f1fddf820a5c9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-22a6434b"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wsc2026-app-alb-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wsc2026-app-alb-sg"
            },
            "tags_all": {
              "Name": "wsc2026-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c116da65719506f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-0966f1fddf820a5c9",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"wsc2026-eks-control-plane-sg\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-06be4f70412a7aa8d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06be4f70412a7aa8d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "wsc2026-eks-control-plane-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wsc2026-eks-control-plane-sg"
            },
            "tags_all": {
              "Name": "wsc2026-eks-control-plane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c116da65719506f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-06be4f70412a7aa8d",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"wsc2026-skills-vpc\"]",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:route-table/rtb-0ca609b76cb73137a",
            "default_route_table_id": "rtb-0ca609b76cb73137a",
            "id": "rtb-0ca609b76cb73137a",
            "owner_id": "076472864721",
            "propagating_vgws": null,
            "region": "ap-northeast-2",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c116da65719506f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"wsc2026-skills-vpc\"]",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-04db29903bc892432",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-04db29903bc892432",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wsc2026-skills-default-sg"
            },
            "tags_all": {
              "Name": "wsc2026-skills-default-sg"
            },
            "vpc_id": "vpc-00c116da65719506f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"wsc2026-skills-vpc\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2092c6795945304",
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:elastic-ip/eipalloc-0b2092c6795945304",
            "domain": "vpc",
            "id": "eipalloc-0b2092c6795945304",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-36-210-211.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.210.211",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-0-eip"
            },
            "tags_all": {
              "Name": "public-0-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "eipalloc-0b2092c6795945304",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e0af27d1c466db6",
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:elastic-ip/eipalloc-00e0af27d1c466db6",
            "domain": "vpc",
            "id": "eipalloc-00e0af27d1c466db6",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-78-189-44.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.189.44",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-1-eip"
            },
            "tags_all": {
              "Name": "public-1-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "eipalloc-00e0af27d1c466db6",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"wsc2026-skills-vpc\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:internet-gateway/igw-019624a1b883547e9",
            "id": "igw-019624a1b883547e9",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "wsc2026-skills-igw"
            },
            "tags_all": {
              "Name": "wsc2026-skills-igw"
            },
            "vpc_id": "vpc-00c116da65719506f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "igw-019624a1b883547e9",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"wsc2026-skills-vpc\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2092c6795945304",
            "association_id": "eipassoc-0abf025fb70560713",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0284735658dec531d",
            "network_interface_id": "eni-0919c1da9a66d2018",
            "private_ip": "192.168.1.194",
            "public_ip": "3.36.210.211",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-018bd8e99acc64ab2",
            "tags": {
              "Name": "wsc2026-skills-nat-a"
            },
            "tags_all": {
              "Name": "wsc2026-skills-nat-a"
            },
            "vpc_id": "vpc-00c116da65719506f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "nat-0284735658dec531d",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e0af27d1c466db6",
            "association_id": "eipassoc-072c9089372104253",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-058f7fcb12a0b5b36",
            "network_interface_id": "eni-0c003e2f0cf8d45f8",
            "private_ip": "192.168.10.129",
            "public_ip": "52.78.189.44",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07d3c25cc0346a706",
            "tags": {
              "Name": "wsc2026-skills-nat-b"
            },
            "tags_all": {
              "Name": "wsc2026-skills-nat-b"
            },
            "vpc_id": "vpc-00c116da65719506f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "nat-058f7fcb12a0b5b36",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"wsc2026-skills-vpc\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c2df6bd22a1f70d71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0284735658dec531d",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0c2df6bd22a1f70d7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0c2df6bd22a1f70d7"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-028831dd6cf8b4c4a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-058f7fcb12a0b5b36",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-028831dd6cf8b4c4a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-028831dd6cf8b4c4a"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-019624a1b883547e9",
            "id": "r-rtb-0880591d6f347d37c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0880591d6f347d37c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0880591d6f347d37c"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"wsc2026-skills-vpc\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:route-table/rtb-0c2df6bd22a1f70d7",
            "id": "rtb-0c2df6bd22a1f70d7",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "wsc2026-skills-app-rtb-a"
            },
            "tags_all": {
              "Name": "wsc2026-skills-app-rtb-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c116da65719506f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-0c2df6bd22a1f70d7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:route-table/rtb-028831dd6cf8b4c4a",
            "id": "rtb-028831dd6cf8b4c4a",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "wsc2026-skills-app-rtb-b"
            },
            "tags_all": {
              "Name": "wsc2026-skills-app-rtb-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c116da65719506f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-028831dd6cf8b4c4a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:route-table/rtb-0880591d6f347d37c",
            "id": "rtb-0880591d6f347d37c",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "wsc2026-skills-hub-rtb"
            },
            "tags_all": {
              "Name": "wsc2026-skills-hub-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c116da65719506f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-0880591d6f347d37c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"wsc2026-skills-vpc\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064f3fa7c9137b100",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0c2df6bd22a1f70d7",
            "subnet_id": "subnet-0c9bc8cb31ed27477"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-064f3fa7c9137b100",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a8f9fbd280ee030",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-028831dd6cf8b4c4a",
            "subnet_id": "subnet-048cd79e377f1af2a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-08a8f9fbd280ee030",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0411ced66db985ee1",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0880591d6f347d37c",
            "subnet_id": "subnet-018bd8e99acc64ab2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-0411ced66db985ee1",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc0af9d89a460bea",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0880591d6f347d37c",
            "subnet_id": "subnet-07d3c25cc0346a706"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-0cc0af9d89a460bea",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"wsc2026-skills-vpc\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-0c9bc8cb31ed27477",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9bc8cb31ed27477",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "wsc2026-skills-app-sub-a"
            },
            "tags_all": {
              "Name": "wsc2026-skills-app-sub-a"
            },
            "vpc_id": "vpc-00c116da65719506f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-0c9bc8cb31ed27477",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-048cd79e377f1af2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "192.168.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048cd79e377f1af2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "wsc2026-skills-app-sub-b"
            },
            "tags_all": {
              "Name": "wsc2026-skills-app-sub-b"
            },
            "vpc_id": "vpc-00c116da65719506f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-048cd79e377f1af2a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-018bd8e99acc64ab2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018bd8e99acc64ab2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "wsc2026-skills-hub-sub-a"
            },
            "tags_all": {
              "Name": "wsc2026-skills-hub-sub-a"
            },
            "vpc_id": "vpc-00c116da65719506f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-018bd8e99acc64ab2",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-07d3c25cc0346a706",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d3c25cc0346a706",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "wsc2026-skills-hub-sub-b"
            },
            "tags_all": {
              "Name": "wsc2026-skills-hub-sub-b"
            },
            "vpc_id": "vpc-00c116da65719506f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-07d3c25cc0346a706",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"wsc2026-skills-vpc\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:vpc/vpc-00c116da65719506f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-081878b932db10e77",
            "default_route_table_id": "rtb-0ca609b76cb73137a",
            "default_security_group_id": "sg-04db29903bc892432",
            "dhcp_options_id": "dopt-0236ce85fd2ddb432",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c116da65719506f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca609b76cb73137a",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "wsc2026-skills-vpc"
            },
            "tags_all": {
              "Name": "wsc2026-skills-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "vpc-00c116da65719506f",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}